Basis responsive design aanmaken.

--- a/Portfolio/Homepage/Homepage.html
+++ b/Portfolio/Homepage/Homepage.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="Homepage.css">
 </head>
 <body>
-    <h1 class="title">Porfolio</h1>
+    <h1 class="title">Portfolio</h1>
     <nav class="links">
-        <a href="Portfolio/Assets/Cv El Mahdi AMIRA.pdf">CV</a>
-        <a href="Portfolio/Info/Info.html">Info</a>
-        <a href="">Logboek</a>
+        <div><a href="Portfolio/Assets/Cv El Mahdi AMIRA.pdf">CV</a></div>
+        <div><a href="Portfolio/Info/Info.html">Info</a></div>
+        <div><a href="">Logboek</a></div>
     </nav>
     <section class="Inleiding">
         <p>Dit is een begin</p>
